# moscot

./: .bumpversion.cfg  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  .rstcheck.cfg  .run_notebooks.sh  LICENSE  MANIFEST.in  README.md  README.rst  Repliacte_ott-jax_scrna.ipynb  Untitled.ipynb  Untitled1.ipynb  WOT_duplication.ipynb  WOT_duplication_LR.ipynb  WOT_duplication_explicit_cost.ipynb  alignment_solutions.pkl  codecov.yml  mapping_solutions.pkl  pyproject.toml  requirements.txt  s.txt  seml-jupyter-4988736.out  seml-jupyter-4990925.out  seml-jupyter-4997894.out  seml-jupyter-5081162.out  setup.py  test.ipynb  test_sankey.ipynb  tox.ini  tutorial_cross_modality_translation.ipynb  uc?export=download&confirm=jL9X&id=1DiUObEYx5MafOfKcDDpuavvOKMyO4fmk
.github/: .codecov.yml
.github/workflows/: deployment.yml  lint.yml  news.yml  release.yml  test-examples.yml  test-tutorials.yaml  test.yml
__MACOSX/tmaps/: ._serum_g.txt
docs/: Makefile  conf.py  contributing.rst  developer.rst  index.rst  installation.rst  ot_background.md  references.bib  references.rst  requirements.txt  spelling_wordlist.txt  tutorials.rst  user.rst  user_guide.md
docs/api/: datasets.rst  developer.rst  index.rst  plotting.rst  user.rst
docs/developer/: backends.rst  base.rst  costs.rst  index.rst  utils.rst
docs/extensions/: typed_returns.py
docs/html/: .buildinfo  classes.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js
docs/source/: api.rst  biological_problems.rst  classes.rst  conf.py  contributing.rst  developers.rst  development.rst  examples.rst  generic_problems.rst  index.rst  installation.rst  problems_docs.rst  references.bib  solvers.rst  solvers_docs.rst  tutorials.rst  utils.py
docs/user/: biological.rst  datasets.rst  generic.rst  index.rst  plotting.rst  problems.rst
moscot/: __init__.py  _base.py  _docs.py  _fgw.py  _mixins.py  _solver.py  _types.py  _utils.py  utils.py
moscot/_constants/: _args.py  _constants.py  _enum.py  _pkg_constants.py
moscot/_docs/: _docs.py  _docs_mixins.py  _docs_plot.py  _utils.py
moscot/analysis_mixins/: __init__.py  _base_analysis.py  _spatial_analysis.py  _time_analysis.py
moscot/backends/: __init__.py  _utils.py
moscot/costs/: __init__.py  _costs.py
moscot/datasets/: __init__.py  _datasets.py  _utils.py
moscot/framework/: BaseProblem.py  _result_cls.py  _spatial_problems.py  custom_costs.py  estimators.py  geometry.py  results.py  settings.py  temporal_problem.py  utils.py  utils_tmp.py
moscot/mixins/: _base_analysis.py  _cost_mixin.py  _spatial_analysis.py  _spatial_mapping_analysis.py  _time_analysis.py
moscot/moscot/: __init__.py
moscot/pl/: __init__.py  _plotting.py  _utils.py
moscot/plotting/: _plotting.py  _utils.py
moscot/problems/: __init__.py  _anndata.py  _base_problem.py  _compound_problem.py  _multimarginal_problem.py  _plotting.py  _subset_policy.py  _utils.py
moscot/solvers/: _base_solver.py  _output.py  _tagged_array.py  _utils.py
moscot/tmp/: __init__.py  _costs.py  utils.py
notebooks/: MK_2021-05-10_c_elegans.ipynb  MK_2021-05-10_c_elegans_new.ipynb  MK_2021-05-10_c_elegans_umap.ipynb  MK_2021-09-07_fgw_comparison_gt.ipynb  MK_2021-09-08_fgw_comparison_novosparc.ipynb  MK_2021-09-17_lineageot.ipynb  MK_2021-09-27_convergence.ipynb  MK_2021-09-27_convergence_bifurcation.ipynb  MK_2021-09-27_lineageot_benchmark.ipynb  MK_2021-09-27_lineageot_cassiopeia.ipynb  MK_2021-09-27_lineageot_seed.ipynb  MK_2021-09-28_lineageot_plot.ipynb  MK_2021-10-08_lot_bc_.ipynb  MK_2021-10-11_c_elegans_plot.ipynb  MK_2021-10-14_c_elegans_cellrank.ipynb  MK_2021-11-18_heart_loom_merge.ipynb  ML_2021-10-15_c_elegans_cellrank.ipynb
notebooks/framework_demos/: DK_01-05-22_tutorial_lineage_estimator.ipynb  DK_01_04_importance_cost_matrix_scaling.ipynb  DK_12-19-21_tutorial_MatchingEstimator.ipynb  DK_12-23-21_tutorial_LineageEstimator.ipynb  Untitled.ipynb  check_if_cost_fn_works_then_delete.ipynb  check_stuff_then_delete.ipynb
notebooks/tedsim/: MK_2021-10-03_tedsim_gen.ipynb  MK_2021-10-03_tedsim_gen_all.ipynb  MK_2021-10-03_tedsim_lineageot.ipynb  MK_2021-10-03_tedsim_lineageot_all.ipynb  MK_2021-10-03_tedsim_lineageot_new.ipynb  MK_2021_28_10_create_adata.ipynb
notebooks/temp/: MK_2021-09-27_lineageot_benchmark-Copy1.ipynb  MK_2021-09-27_lineageot_benchmark-Copy2.ipynb  MK_2021-09-27_lineageot_benchmark-Copy3.ipynb  MK_2021-09-27_lineageot_benchmark-Copy4.ipynb  MK_2021-09-27_lineageot_benchmark-Copy5.ipynb  MK_2021-09-27_lineageot_benchmark-Copy6.ipynb
notebooks/tumors/: MK_2021-12-03_tumor_branch_lengths.ipynb
old_code_to_recycle/old_code_from_moscot_lineage/: _solver.py  _utils.py
scott/: __init__.py  _base.py  _costs.py  _mixins.py  _solver.py
src/moscot/: __init__.py  _constants.py  _registry.py  _types.py  _utils.py  constants.py  data.py  datasets.py  logging.py
tests/: _utils.py  conftest.py  test_TemporalProblem.py  test_backend.py  test_compound_problem.py  test_general_problem.py  test_multimarginal_problem.py  test_pipeline.py
tests/analysis_mixins/: conftest.py  test_base_analysis.py  test_spatial_analysis.py  test_time_analysis.py
tests/costs/: test_cost.py  test_utils.py
tests/data/: alignment_solutions.pkl  cell_transition_10_105_backward.csv  cell_transition_10_105_forward.csv  generate_gt_temporal_data.py  generate_spatial.py  generate_warp.py  mapping_solutions.pkl  moscot_temporal_tests.h5ad  regression_tests_spatial.py
tests/datasets/: test_dataset.py
tests/mixins/: conftest.py  test_base_analysis.py  test_time_analysis.py
tests/pl/: conftest.py  test_pl.py
tests/plotting/: conftest.py  test_plotting.py  test_utils.py
tests/problems/: _utils.py  conftest.py  test_compound_problem.py  test_general_problem.py  test_multimarginal_problem.py  test_subset_policy.py
tests/solvers/: test_base_solver.py
tutorials/: ZP-2021-10-20_tutorial_moscot-lineage_FGW-regimes.ipynb  ZP-2021-10-20_tutorial_moscot-lineage_trajectories.ipynb  tutorial_moscot-lineage_basic.ipynb  utility.py
(+469 files in other folders)
